force-app/main/default/objects/Customer_Portfolio_Summary__c/Customer_Portfolio_Summary__c.object-meta.xml
<CustomObject>
    <label>Customer Portfolio Summary</label>
    <nameField>
        <label>Customer Portfolio Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Portfolio Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>