force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Consumer_Discretionary__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Discretionary__c</fullName>
    <label>Consumer Discretionary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>