force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Consumer_Discretionary_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Discretionary_Percentage__c</fullName>
    <label>Consumer Discretionary Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>