force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Energy__c.field-meta.xml
<CustomField>
    <fullName>Energy__c</fullName>
    <label>Energy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>