force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Energy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Energy_Percentage__c</fullName>
    <label>Energy Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>