force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <label>Financials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>