force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/FMCG__c.field-meta.xml
<CustomField>
    <fullName>FMCG__c</fullName>
    <label>FMCG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>