force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Healthcare__c.field-meta.xml
<CustomField>
    <fullName>Healthcare__c</fullName>
    <label>Healthcare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>