force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Healthcare_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Percentage__c</fullName>
    <label>Healthcare Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>