force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Industrials__c.field-meta.xml
<CustomField>
    <fullName>Industrials__c</fullName>
    <label>Industrials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>