force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>