force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number__c</fullName>
    <externalId>true</externalId>
    <label>Pan Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>