force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>