force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Telecom__c.field-meta.xml
<CustomField>
    <fullName>Telecom__c</fullName>
    <label>Telecom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>