force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Total_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Total_Portfolio__c</fullName>
    <label>Total Portfolio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>