force-app/main/default/objects/Customer_Portfolio_Summary__c/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <label>Utilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>