force-app/main/default/objects/Customer_Portfolio_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Name__c</columns>
    <columns>Pan_Number__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Total_Portfolio__c</columns>
    <columns>FMCG__c</columns>
    <columns>FMCG_Percentage__c</columns>
    <columns>Financials__c</columns>
    <columns>Financials_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>